# asteroids

./: README.md  pyproject.toml
src/asteroids/: asteroid.py  asteroidfield.py  circleshape.py  main.py  player.py  shot.py
